# darvis

./: .gitignore
.envoy/: config.toml
darvis-core/: .gitignore  main.py  pyproject.toml
darvis-core/darvis/: daemon.py
darvis-core/darvis/chat/: __init__.py  component.py
darvis-core/darvis/core/: cancellation.py  constants.py  events.py  fsm.py  handlers.py  states.py  task_registry.py  transitions.py
darvis-core/darvis/correction/: __init__.py  base.py  component.py  llm_corrector.py
darvis-core/darvis/input/: component.py
darvis-core/darvis/mcp/: __init__.py  client.py  tool_executor.py
darvis-core/darvis/output/: component.py
darvis-core/darvis/services/: __init__.py  process_manager.py
darvis-core/darvis/transcription/: base.py  component.py  http_transcriber.py
darvis-core/darvis/utils/: audio_playback.py  keyboard_input.py  reasons.py  sentence_splitter.py
darvis-core/darvis/voice/: capture.py  component.py  http_wakeword.py  wake_word.py
darvis-mcp-server/: main.py  pyproject.toml
darvis-mcp-server/mcp_server/: server.py
darvis-mcp-server/mcp_server/tools/: __init__.py  system_info.py  web_search.py
darvis-transcription/: main.py  pyproject.toml
darvis-transcription/transcription_service/: __init__.py  config.py  server.py  transcriber.py
darvis-tts/: main.py  pyproject.toml
darvis-tts/tts_service/: config.py  server.py  synthesizer.py
darvis-wakeword/: main.py  pyproject.toml
darvis-wakeword/wakeword_service/: __init__.py  config.py  detector.py  server.py
scripts/: start_all.ps1  start_all.sh  start_darvis.ps1  start_darvis.sh  start_transcription.ps1  start_transcription.sh  start_tts.ps1  start_tts.sh  start_wakeword.ps1  start_wakeword.sh  stop_all.ps1  stop_all.sh  test_tts.ps1  test_tts.sh
