[project]
name = "darvis"
version = "0.1.0"
description = "DARVIS - Deniz.As.Rather.Very.Intelligent.System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "keyboard>=0.13.5",
    "websockets>=14.0",
    "numpy>=2.4.1",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.3",
    "wheel>=0.45.1",
    "llama-cpp-python>=0.3.16",
    "coloredlogs>=15.0.0",
    "flatbuffers>=25.12.19",
    "packaging>=25.0",
    "protobuf>=6.33.4",
    "sympy>=1.14.0",
]
