[project]
name = "darvis-tts"
version = "0.1.0"
description = "Kokoro TTS service for DARVIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.13.0",
    "numpy>=1.26.0",
    "httpx>=0.28.0",
]
